@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.dyndns.fules.ck"
-	android:versionCode="10"
+	android:versionCode="11"
 	android:versionName="@string/ck_version_summary">
 	<uses-sdk
 		android:minSdkVersion="7"
